dev-00: refactoring stepper 1