@@ -1,4 +1,8 @@
 
+## Java Versions
+- javac --release 13 --enable-preview Example.java    // Compile with preview features of JDK13
+- java  --enable-preview Example	                    // Run with preview features of JDK 13
+
 ## Java monitor tools
 
      # jconsole, jvisualvm, jmc
@@ -13,112 +17,6 @@
         You store them in a keystore file, anywhere you want on the file system. Then you tell the "server" where it is.
         Exactly how you do that depends on what the "server" is, e.g. for Tomcat you give the path to the keystore file in the server.xml file.
 
-## enum
-
-JDK 1.5 introduces a new enum type (in addition to the existing top-level constructs class and interface) along with a new keyword enum.
-
->1. Whenever an enum is defined, a class that extends java.lang.Enum is created
->1. You are not allowed to construct a new instance of enum using new operator, because enum keeps a fixed list of constants.
->1. You can use the “==” operator to compare enum constants effectively, since enum constants are final.
->1. An enum can be used to define a set of enum constants. The constants are *implicitly static final*, which cannot be modified. Since they are static, they can be accessed via EnumName.instanceName.
->1. You cannot extend any other class in enum, enums extend the java.lang.Enum class implicitly.
->1. An enum is a reference type (just like a class, interface and array), which holds a reference to memory in the heap.
->1. enum is a keyword. Enum constructors are always private or default. Therefore, you cannot have public or protected constructors in an enum type.
->1. Enum with abstract method Each of the instances of enum could have its own behaviors.
->1. Enums can implement interfaces. They implicitly implement the Serializable and Comparable interfaces.
->1. You can declare abstract methods within an enum. If you do, all the enum fields must implement the abstract methods.
->
->        For example: 
->        enum CardSuit { SPADE, DIAMOND, CLUB, HEART }
->        for each enum, the Java compiler automatically generates a static method called values() that returns an array of all the enum constants,
->        4 instances of enum type CardSuit were generated via values(). The instances are created by calling the constructor with the actual argument, when they are first referenced.
->        
->
->        ## Compiled class
->            public static final class EnumExample1$Season extends Enum
->            {
->              private EnumExample1$Season(String s, int i)
->                {
->                    super(s, i);
->                }
->
->                public static EnumExample1$Season[] values()
->                {
->                    return (EnumExample1$Season[])$VALUES.clone();
->                }
->
->                public static EnumExample1$Season valueOf(String s)
->                {
->                    return (EnumExample1$Season)Enum.valueOf(EnumExample1$Season, s);
->                }
->
->                public static final EnumExample1$Season WINTER;
->                public static final EnumExample1$Season SPRING;
->                public static final EnumExample1$Season SUMMER;
->                public static final EnumExample1$Season FALL;
->                private static final EnumExample1$Season $VALUES[];
->
->                static
->                {
->                    WINTER = new EnumExample1$Season("WINTER", 0);
->                    SPRING = new EnumExample1$Season("SPRING", 1);
->                    SUMMER = new EnumExample1$Season("SUMMER", 2);
->                    FALL = new EnumExample1$Season("FALL", 3);
->                    $VALUES = (new EnumExample1$Season[] {
->                        WINTER, SPRING, SUMMER, FALL
->                    });
->                }
->            }
->
->        ## Static
->            enum types that are defined as nested types are always implicitly STATIC, so If you declared an enum like this:
->
->                    enum Suit {SPADES, HEARTS, CLUBS, DIAMONDS}
->
->            The Java compiler would synthetically generate the following class for you:
->            final class Suit extends java.lang.Enum<Suit> {
->              public static final Suit SPADES;
->              public static final Suit HEARTS;
->              public static final Suit CLUBS;
->              public static final Suit DIAMONDS;
->              private static final Suit[] $VALUES;
->              public static Suit[] values();
->              public static Suit valueOf(java.lang.String);
->              private Suit();
->            }
->
->
->        ## SAM ( enum )
->            An enum type can have abstract methods just like a class. Each enum constant needs to implement the abstract method. An example is as follows:
->
->            public enum Animal {
->              Dog { String sound() { return "bark"; } },
->              Cat { String sound() { return "meow"; } },
->              Lion { String sound() { return "roar"; } },
->              Snake { String sound() { return "hiss"; } };
->              abstract String sound();
->            };
->
->            then:
->            String str = "Dog";
->            Animal animal = Animal.valueOf(Animal.class, str);
->            System.out.println(animal + " makes sound: " + animal.sound());
->            // prints
->            Dog makes sound: bark
->
->
->        ## valueOf() to look up an enum by the name.
->
->            The java compiler internally adds the values() method when it creates an enum.
->            The values() method returns an array containing all the values of the enum.
->
->            private enum Day {
->                SUNDAY, MONDAY, TUESDAY, WEDNESDAY,
->                THURSDAY, FRIDAY, SATURDAY
->            };
->            Day day = Day.valueOf(Day.class, "MONDAY");
->            //The method throws an IllegalArgumentException if the name (with the exact case) is not found.  then use Day day = Day.valueOf(Day.class, "Monday");
->            \
 
 ## Encounter order / Spatial order
 
@@ -233,10 +131,10 @@ JDK 1.5 introduces a new enum type (in addition to the existing top-level constr
                 C (int n) { super(n); } // a constructor
             }
 
-## Final keyword
+## final
 
-        When should I use final?
-        One answer to this is "whenever you possibly can". 
+        When should I use final? **One answer to this is "whenever you possibly can". **
+        
         Any field that you never expect to be changed (be that a primitive value, or a reference to an object, whether or not that particular object is itself immutable or not), should generally be declared final. 
         Another way of looking at things is:
         If your object is accessed by multiple threads, and you don't declare its fields final, then you must provide thread-safety by some other means.
@@ -247,3 +145,14 @@ JDK 1.5 introduces a new enum type (in addition to the existing top-level constr
         it doesn't matter that the accesses by different threads aren't concurrent.
         What matters is that the object is accessed by different threads at any point in its lifetime.
 
+## volatile variable
+
+1. Volatile Keyword is applicable to variables.
+1. volatile keyword prevents caching of variables.
+1. On modern CPUs, even a volatile variable can be shared among distinct CPU caches
+1. Volatile is An indication to the VM that multiple threads may try to access/update the field's value at the same time.
+1. volatile keyword in Java guarantees that value of the volatile variable will always be read from main memory and not from Thread's local cache.
+1. Volatile is Similar to Static(Class) variable, Only one copy of volatile value is cached in main memory,
+1. Before doing any ALU Operations each thread has to read the updated value from Main memory after ALU operation it has to write to main memory direclty.
+1. Changes to a volatile variable are always visible to other threads.
+1. JVM uses CPU architecture to ensure the visibility of 'volatile variable' across ALL threads after the WRITE operation
